# x86_sandbox_sju_pwn_all

./: README.md
docker/: Dockerfile  ctf.xinetd  docker_build.sh  docker_remove.sh
exp/: payload.py
source_code/x86_sandbox/: CMakeLists.txt  payload.py
source_code/x86_sandbox/src/: .gdb_history  CMakeLists.txt  Makefile  main.h  mian.cpp  syscall.cpp  syscall.h
source_code/x86_sandbox/src/parsePE/: parsePE.sln
source_code/x86_sandbox/src/parsePE/Debug/: Project1.ilk
source_code/x86_sandbox/src/parsePE/Project1/: Project1.vcxproj  源.cpp
source_code/x86_sandbox/src/parsePE/Project1/Debug/: vc142.idb
source_code/x86_sandbox/src/parsePE/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source_code/x86_sandbox/src/parsePE/Project1/x64/Debug/: vc142.idb
source_code/x86_sandbox/src/parsePE/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source_code/x86_sandbox/src/parsePE/x64/Debug/: Project1.ilk
source_code/xctf_pwn/: main.cpp  xctf_pwn  xctf_pwn.i64
